Fix: collapse header on window resize

--- a/partials/Header/styles/header.scss
+++ b/partials/Header/styles/header.scss
@@ -49,7 +49,13 @@
     .header__collapse{
         flex-direction: column;
         align-items: flex-start;
-       
+        display: none;
+
+        &_open{
+            display: flex;
+        }
+
+
         &>*{
             width: 100%;
         }
